Get all profiles and Get profile by user id

--- a/config/default.json.sample
+++ b/config/default.json.sample
@@ -1,5 +1,8 @@
 {
   "mongoURI": "",
   "jwtSecret": "",
-  "jwtOptions": { "expiresIn": 360000 }
+  "jwtOptions": { "expiresIn": 360000 },
+  "defaultProfileFields": {
+    "bio": "Hey there I'm using devconnect!"
+  }
 }
