Update config sample

--- a/config/default.json.sample
+++ b/config/default.json.sample
@@ -4,5 +4,7 @@
   "jwtOptions": { "expiresIn": 360000 },
   "defaultProfileFields": {
     "bio": "Hey there I'm using devconnect!"
-  }
+  },
+  "githubClientId": "",
+  "githubClientSecret": ""
 }
